Added simple books api

--- a/SimpleOpenAPI/SimpleOpenAPI.Api/SimpleOpenAPI.Api.csproj
+++ b/SimpleOpenAPI/SimpleOpenAPI.Api/SimpleOpenAPI.Api.csproj
@@ -8,7 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
+    <PackageReference Include="AutoMapper" Version="10.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
   </ItemGroup>
 
-
+  <ItemGroup>
+    <ProjectReference Include="..\SimpleOpenAPI.Domain\SimpleOpenAPI.Domain.csproj" />
+  </ItemGroup>
+  
 </Project>
