--- a/SimpleOpenAPI/SimpleOpenAPI.Api/SimpleOpenAPI.Api.csproj
+++ b/SimpleOpenAPI/SimpleOpenAPI.Api/SimpleOpenAPI.Api.csproj
@@ -8,6 +8,7 @@
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <DocumentationFile>bin\Debug\SimpleOpenAPI.Api.xml</DocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
