Moved contract files to version v1

--- a/SimpleOpenAPI/SimpleOpenAPI.Api/SimpleOpenAPI.Api.csproj
+++ b/SimpleOpenAPI/SimpleOpenAPI.Api/SimpleOpenAPI.Api.csproj
@@ -26,5 +26,9 @@
   <ItemGroup>
     <ProjectReference Include="..\SimpleOpenAPI.Domain\SimpleOpenAPI.Domain.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Contracts\V1" />
+  </ItemGroup>
   
 </Project>
