--- a/SimpleOpenAPI/SimpleOpenAPI.Api/SimpleOpenAPI.Api.csproj
+++ b/SimpleOpenAPI/SimpleOpenAPI.Api/SimpleOpenAPI.Api.csproj
@@ -8,11 +8,12 @@
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <DocumentationFile>bin\Debug\SimpleOpenAPI.Api.xml</DocumentationFile>
-    <NoWarn>1591</NoWarn>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <DocumentationFile>bin\Release\SimpleOpenAPI.Api.xml</DocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
